--- a/java-config/service-zuul-dev.yml
+++ b/java-config/service-zuul-dev.yml
@@ -6,3 +6,6 @@ zuul:
     api-b:
       path: /api-b/**
       serviceId: service-feign
+    api-c:
+      path: /api-c/**
+      serviceId: service-feign
