--- a/java-config/service-zuul-dev.yml
+++ b/java-config/service-zuul-dev.yml
@@ -7,5 +7,5 @@ zuul:
       path: /api-b/**
       serviceId: service-feign
     api-c:
-      path: /api-b/**
+      path: /api-c/**
       serviceId: service-feign
